[project]
name = "mxio"
description = "A Simple X-ray Area Detector Data IO Library"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
authors = [
    { name = "Michel Fodje", email = "michel4j@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "hdf5plugin",
    "parsefire",
    "h5py",
    "opencv-python",
    "python-magic",
    "pytz",
    "pyyaml",
    "numpy",
    "iso8601",
    "lz4",
    "pyzmq",
    "setuptools-scm"
]
requires-python = ">=3.9,<4.0"
version = "0.0.0"

[project.urls]
Homepage = "https://github.com/michel4j/mxio"
Issues = "https://github.com/michel4j/mxio/issues"


[project.entry-points."mxio.plugins"]
CBF = "mxio.formats.cbf"
HDF5 = "mxio.formats.hdf5"
MARCCD = "mxio.formats.marccd"
RAXIS = "mxio.formats.raxis"
SMV = "mxio.formats.smv"
NEXUS = "mxio.formats.nexus"
MAR345 = "mxio.formats.mar345"

[tool.poetry]
packages = [
    { include = "mxio" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}.{revision}{distance}"
